--- a/NetBeansProjects/Ahorcado/nbproject/private/private.properties
+++ b/NetBeansProjects/Ahorcado/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\FP\\AppData\\Roaming\\NetBeans\\19\\build.properties
+user.properties.file=C:\\Users\\Cristian\\AppData\\Roaming\\NetBeans\\21\\build.properties
